# Marginal

./: .gitignore  README.md  package.json  update-onedrive-copy.bat
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
ui/: index.html
