[package]
name = "marginal"
version = "1.1.0"
description = "Marginal — a fast, local PDF viewer and editor."
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "marginal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
